--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -5,9 +5,9 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
-  schedule:
-    - cron: "42 17 * * *" # Ejecuta el flujo de trabajo diariamente a las 14:33
   workflow_dispatch:
+  schedule:
+    - cron: "10 10 * * *" # Ejecuta el flujo de trabajo diariamente a las 3:10PM UTC-3 (10:10 AM GMT-5)
 
 jobs:
   build:
