--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -7,7 +7,7 @@ on:
     branches: [main]
   workflow_dispatch:
   schedule:
-    - cron: "30 18 * * *" # Ejecuta el flujo de trabajo diariamente a las 3:10PM UTC-3
+    - cron: "48 18 * * *" # Ejecuta el flujo de trabajo diariamente a las 3:48 PM Argentina (UTC-3)
 
 jobs:
   build:
